# RADIPOP

./: .gitignore  RADIPOP_extract_features_external_validation.ipynb  RADIPOP_model_training_RFvsEN_10_iterations.ipynb  README.md  pyproject.toml  requirements.txt  test_imports.py
R/: RADIPOP_analysis.Rmd
environments/: README.md  environment.yml  environment_all.yml  environment_py10.yml  original_requirements_martin.txt  save_envs.sh
notebooks/: CW_auto_segmentation_and_prediction.ipynb  CW_collect_results.ipynb  CW_dev.ipynb  CW_evaluate_model.ipynb  CW_extract_features.ipynb  CW_model_training.ipynb  CW_prepare_table_external_val.ipynb  RADIPOP_extract_features_external_validation.ipynb  RADIPOP_model_training.ipynb
radipop_utils/: conversion_utils_mw_with_reporting_function.py  data.py  features.py  inference.py  inference_via_total_segmentor.py  load_data.py  utils.py  visualization.py
radipop_utils/data_trained_models/small_dataset_auto_seg_spacing_111_ORD/: README.md  SpearmanRed1_RF_opt_params.yml  radiomics_fe_settings.yaml
radipop_utils/data_trained_models/small_dataset_auto_seg_spacing_111_WFD/: README.md  SpearmanRed1_EN_opt.p  SpearmanRed1_EN_opt_params.yml  SpearmanRed1_RF_opt.p  SpearmanRed1_RF_opt_params.yml
radipop_utils/preprocessing/: combine_pickeled_masks.py  convert_dcm_and_mask_from_index.py  dcm_seperation.py  mask_and_png_seperation.py
radipop_utils/tools/: auto_segmentation_and_prediction_entry_point.py  combine_masks_and_extract_features_entry_point.py  combine_radiomics_with_scalar_target_and_split.py  evaluate_model_entry_point.py  extract_features_entry_point.py  extract_features_from_many_patients_entry_point.py  full_pipeline_entry_point.py  inference_from_features_entry_point.py  my_dcm2nii.py  pipeline_dcm_separation_dcm2nii_totalseg_entry_point.py  suggest_radiomics_binwidth_entry_point.py  train_with_optimal_hp.py  training_and_hyperparams_search_entry_point.py
run_scripts/: my_dcm2_nii_script.sh  run.sh  run_dcm2_nii_seperate_by_aq.sh  run_dcm2_nii_single.sh  run_dcm_inventory.sh  run_pipeline.sh  run_pipeline_V2.sh  run_prediction.sh  run_seperation.sh
singularity/: sample_file.def
tutorials/: README.md
yaml/: exampleCT.yaml  radiomics_fe_setttings_CT_no_preprocessing.yaml
